--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,8 +40,9 @@
     <EditText
         android:id="@+id/account"
         android:layout_width="158dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@null"
+        android:gravity="center_vertical"
         android:hint="@string/account_hint"
         android:imeOptions="actionDone"
         android:inputType="text"
@@ -67,10 +68,11 @@
         android:textSize="16dp" />
 
     <EditText
-        android:id="@+id/account"
+        android:id="@+id/password"
         android:layout_width="158dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@null"
+        android:gravity="center_vertical"
         android:hint="@string/password_hint"
         android:imeOptions="actionNext"
         android:inputType="text"
@@ -86,6 +88,7 @@
       android:orientation="horizontal">
 
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="80dp"
         android:layout_height="32dp"
         android:background="@drawable/shape_btn_bg"
@@ -94,6 +97,7 @@
         android:textSize="16dp" />
 
     <Button
+        android:id="@+id/btn_sign_in"
         android:layout_width="80dp"
         android:layout_height="32dp"
         android:layout_marginLeft="96dp"
