--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
 
   <color name="app_black">#000000</color>
+  <color name="app_white">#FFFFFF</color>
+  <color name="app_red">#DA2D2D</color>
+  <color name="app_devider">#D3D3D3</color>
 </resources>
