--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,29 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
-  <style name="AppTheme.Main" parent="AppTheme"/>
+  <style name="AppTheme.Main" parent="AppTheme" />
+
+  <style name="TextView_Style_Order">
+    <item name="android:textSize">12dp</item>
+    <item name="android:drawablePadding">13dp</item>
+    <item name="android:textColor">@color/app_black</item>
+  </style>
+
+  <style name="TextView_Style_Order_Value">
+    <item name="android:textSize">14dp</item>
+    <item name="android:textColor">@color/app_red</item>
+    <item name="android:layout_marginTop">10dp</item>
+  </style>
+
+  <style name="TextView_Style_more">
+    <item name="android:textSize">14dp</item>
+    <item name="android:textColor">#0891EA</item>
+    <item name="android:paddingLeft">13dp</item>
+    <item name="android:paddingRight">13dp</item>
+    <item name="android:background">@color/app_white</item>
+    <item name="android:gravity">center_vertical</item>
+    <item name="android:height">49dp</item>
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:drawableRight">@drawable/more_icon</item>
+  </style>
 </resources>
