--- a/app/src/main/res/xml/accessibility_service_info.xml
+++ b/app/src/main/res/xml/accessibility_service_info.xml
@@ -6,5 +6,6 @@
     android:canRetrieveWindowContent="true"
     android:description="@string/accessibility_description"
     android:notificationTimeout="100"
-    android:packageNames="com.tencent.mobileqq ,com.tencent.mm"
+    android:packageNames="com.tencent.mobileqq,com.tencent.mm,com.eg.android.AlipayGphone"
     android:settingsActivity="com.jianwu.commercialpay" />
+
