--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
         android:gravity="center_vertical"
         android:hint="@string/password_hint"
         android:imeOptions="actionNext"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:textColor="@color/app_black"
         android:textSize="16dp" />
   </LinearLayout>
