--- a/app/src/main/res/xml/accessibility_service_info.xml
+++ b/app/src/main/res/xml/accessibility_service_info.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accessibilityEventTypes="typeNotificationStateChanged|typeWindowStateChanged"
+    android:accessibilityEventTypes="typeNotificationStateChanged"
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"
     android:description="@string/accessibility_description"
     android:notificationTimeout="100"
-    android:packageNames="com.tencent.mobileqq,com.tencent.mm,com.eg.android.AlipayGphone"
-    android:settingsActivity="com.jianwu.commercialpay" />
+    android:packageNames="com.tencent.mobileqq,com.tencent.mm,com.eg.android.AlipayGphone" />
 
